<resources>
    <string name="app_name">Calculator</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="unit_calculator">RAD</string>
    <string name="more">more</string>

<!--    button in calculator-->
    <string name="button_c">C</string>
    <string name="button_mod">%</string>
    <string name="button_0">0</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_.">.</string>
    <string name="button_div">/</string>
    <string name="button_equal">=</string>




    <dimen name="height_button">80dp</dimen>
    <dimen name="size_text_button">40sp</dimen>
</resources>