<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewmodel"
            type="com.example.calculator.viewmodel.MainViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainFragment">

        <!-- TODO: Update blank fragment layout -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{viewmodel.unit}"
                tools:text = "RAD"
                android:textStyle="bold"
                android:textSize="24sp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:padding="5dp"
                android:textColor="@color/main_color"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_more_vert_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:padding="5dp"
                app:tint="@color/main_color"
                android:contentDescription="@string/more"
                tools:ignore="UseAppTint" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:lines="2"
            android:text="@{viewmodel.textCaculator}"
            android:textSize="60sp"
            android:textColor="@color/second_color"
            tools:text="1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1"
            android:layout_marginHorizontal="10dp"/>
        <TextView
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:lines="1"
            android:textAlignment="textEnd"
            android:textSize="60sp"
            android:text="@{viewmodel.result}"
            android:textColor="@color/second_color"
            tools:text="1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1"
            android:layout_marginHorizontal="10dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="bottom"
            android:layout_marginBottom="20dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_button"
                android:orientation="horizontal"
                android:weightSum="4">
                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="0dp"
                    android:layout_height="@dimen/height_button"
                    android:layout_weight="1"
                    android:textSize="@dimen/size_text_button"
                    android:textColor="@color/second_color"
                    android:background="@drawable/button_calculator"
                    android:text="@string/button_c"
                    android:onClick="@{()->viewmodel.click_c()}"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="0dp"
                    android:layout_height="@dimen/height_button"
                    android:layout_weight="1"
                    android:textSize="@dimen/size_text_button"
                    android:textColor="@color/second_color"
                    android:background="@drawable/button_calculator"
                    android:text="@string/button_mod"/>
                <androidx.appcompat.widget.AppCompatImageButton
                    android:layout_width="0dp"
                    android:layout_height="@dimen/height_button"
                    android:layout_weight="1"
                    android:tint="@color/second_color"
                    android:background="@drawable/button_calculator"
                    android:src="@drawable/ic_baseline_backspace_24"
                    android:onClick="@{()->viewmodel.click_del()}"/>
                <androidx.appcompat.widget.AppCompatImageButton
                    android:layout_width="0dp"
                    android:layout_height="@dimen/height_button"
                    android:layout_weight="1"
                    android:tint="@color/second_color"
                    android:background="@drawable/button_calculator"
                    android:src="@drawable/ic_baseline_add_24"
                    android:onClick="@{()->viewmodel.click_add()}"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_button"
                android:orientation="horizontal"
                android:weightSum="4">
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button7"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/height_button"
                    android:layout_weight="1"
                    android:textSize="@dimen/size_text_button"
                    android:textColor="@color/main_color"
                    android:background="@drawable/button_calculator"
                    android:text="@string/button_7"
                    android:onClick="@{()->viewmodel.click_digit(button7)}"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button8"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/height_button"
                    android:layout_weight="1"
                    android:textSize="@dimen/size_text_button"
                    android:textColor="@color/main_color"
                    android:background="@drawable/button_calculator"
                    android:text="@string/button_8"
                    android:onClick="@{()->viewmodel.click_digit(button8)}"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button9"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/height_button"
                    android:layout_weight="1"
                    android:textSize="@dimen/size_text_button"
                    android:textColor="@color/main_color"
                    android:background="@drawable/button_calculator"
                    android:text="@string/button_9"
                    android:onClick="@{()->viewmodel.click_digit(button9)}"/>
                <androidx.appcompat.widget.AppCompatImageButton
                    android:layout_width="0dp"
                    android:layout_height="@dimen/height_button"
                    android:layout_weight="1"
                    android:tint="@color/second_color"
                    android:background="@drawable/button_calculator"
                    android:src="@drawable/ic_baseline_remove_24"
                    android:onClick="@{()->viewmodel.click_sub()}"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_button"
                android:orientation="horizontal"
                android:weightSum="4">
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button4"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/height_button"
                    android:layout_weight="1"
                    android:textSize="@dimen/size_text_button"
                    android:textColor="@color/main_color"
                    android:background="@drawable/button_calculator"
                    android:text="@string/button_4"
                    android:onClick="@{()->viewmodel.click_digit(button4)}"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button5"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/height_button"
                    android:layout_weight="1"
                    android:textSize="@dimen/size_text_button"
                    android:textColor="@color/main_color"
                    android:background="@drawable/button_calculator"
                    android:text="@string/button_5"
                    android:onClick="@{()->viewmodel.click_digit(button5)}"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button6"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/height_button"
                    android:layout_weight="1"
                    android:textSize="@dimen/size_text_button"
                    android:textColor="@color/main_color"
                    android:background="@drawable/button_calculator"
                    android:text="@string/button_6"
                    android:onClick="@{()->viewmodel.click_digit(button6)}"/>
                <androidx.appcompat.widget.AppCompatImageButton
                    android:layout_width="0dp"
                    android:layout_height="@dimen/height_button"
                    android:layout_weight="1"
                    android:tint="@color/second_color"
                    android:background="@drawable/button_calculator"
                    android:src="@drawable/ic_baseline_close_24"
                    android:onClick="@{()->viewmodel.click_mul()}"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_button"
                android:orientation="horizontal"
                android:weightSum="4">
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button1"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/height_button"
                    android:layout_weight="1"
                    android:textSize="@dimen/size_text_button"
                    android:textColor="@color/main_color"
                    android:background="@drawable/button_calculator"
                    android:text="@string/button_1"
                    android:onClick="@{()->viewmodel.click_digit(button1)}"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button2"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/height_button"
                    android:layout_weight="1"
                    android:textSize="@dimen/size_text_button"
                    android:textColor="@color/main_color"
                    android:background="@drawable/button_calculator"
                    android:text="@string/button_2"
                    android:onClick="@{()->viewmodel.click_digit(button2)}"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button3"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/height_button"
                    android:layout_weight="1"
                    android:textSize="@dimen/size_text_button"
                    android:textColor="@color/main_color"
                    android:background="@drawable/button_calculator"
                    android:text="@string/button_3"
                    android:onClick="@{()->viewmodel.click_digit(button3)}"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="0dp"
                    android:layout_height="@dimen/height_button"
                    android:layout_weight="1"
                    android:textSize="@dimen/size_text_button"
                    android:textColor="@color/second_color"
                    android:background="@drawable/button_calculator"
                    android:text="@string/button_div"
                    android:onClick="@{()->viewmodel.click_div()}"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_button"
                android:orientation="horizontal"
                android:weightSum="4">
                <androidx.appcompat.widget.AppCompatImageButton
                    android:layout_width="0dp"
                    android:layout_height="@dimen/height_button"
                    android:layout_weight="1"
                    android:tint="@color/second_color"
                    android:background="@drawable/button_calculator"
                    android:src="@drawable/ic_baseline_crop_rotate_24"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button0"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/height_button"
                    android:layout_weight="1"
                    android:textSize="@dimen/size_text_button"
                    android:textColor="@color/main_color"
                    android:background="@drawable/button_calculator"
                    android:text="@string/button_0"
                    android:onClick="@{()->viewmodel.click_digit(button0)}"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/buttonDot"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/height_button"
                    android:layout_weight="1"
                    android:textSize="@dimen/size_text_button"
                    android:textColor="@color/main_color"
                    android:background="@drawable/button_calculator"
                    android:text="@string/button_."
                    android:onClick="@{()->viewmodel.click_dot()}"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="0dp"
                    android:layout_height="@dimen/height_button"
                    android:layout_weight="1"
                    android:textSize="@dimen/size_text_button"
                    android:textColor="@color/white"
                    android:background="@drawable/button_calculator"
                    android:backgroundTint="@color/second_color"
                    android:text="@string/button_equal"
                    android:onClick="@{()->viewmodel.click_equal()}"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>